Orders Switched to Intelligent Parser Added Links to Orders Billing & Contacts Address Lot of Minor bug Fix! Signed-off-by:BadPixxel <eshop.bpaquier@gmail.com>

--- a/splash/langs/en_US/splash.lang
+++ b/splash/langs/en_US/splash.lang
@@ -50,7 +50,7 @@ SPL_DfMultiPrice    =   Default Price used by the module (MultiPrices mode is en
 ################################################################################
 
 SPL_ObjectsList     = List of Available Objets 
-SPL_WidgetList      = List of Available Widgets
+SPL_WidgetsList      = List of Available Widgets
 
 ################################################################################
 # Admin Page Connect Tests Results
