--- a/splash/langs/en_US/splash.lang
+++ b/splash/langs/en_US/splash.lang
@@ -52,7 +52,6 @@ SPL_Local_Help      =   https://splashsync.github.io/Dolibarr/configuration/#set
 SPL_DfLang          =   Default Language used by the module
 SPL_DfUser          =   User to use for all remote operations
 SPL_DfStock         =   Default Whareouse used by the module (if not spécified)
-SPL_DfBankAccount   =   Default Bank Account used by the module (if not spécified)
 SPL_DfPayMethod     =   Default Payement Method used by the module (if not spécified)
 SPL_DfMultiPrice    =   Default Price used by the module (MultiPrices mode is enabled)
 
@@ -64,7 +63,18 @@ SPL_Orders_Config   =   Orders & Invoices
 SPL_Orders_Help     =   https://splashsync.github.io/Dolibarr/configuration
 SPL_DetectTaxName   =   Detect tax rates using taxes codes dictionary
 SPL_DetectTaxName_T =   When importing orders and invoices, if a tax rate code is given and can be identified in your dictionary, it will be used by the module instead of the VAT rate provided in the price.
+SPL_Orders_Guest    =   Allow Import of Guests Orders & Invoices
+SPL_Orders_Guest_T  =   This mode allow import of Orders & Invoices passed using Guest Mode on moderns E-Commerce platforms.
+SPL_Orders_Guest_U  =   Select the default Customer all Guest invoices will be attached to.
+SPL_Orders_Email    =   Try to detect Exiting Customer using it's Email
 
+################################################################################
+# Admin Page Index - Payments
+################################################################################
+
+SPL_Payment_Config  =   Payments Import
+SPL_DfBankAccount   =   Default Bank Account used by the module (if not spécified)
+SPL_BankAccountFor  =   Bank Account used for <b>%s</b> payments (%s)
 
 
 ################################################################################
@@ -72,7 +82,7 @@ SPL_DetectTaxName_T =   When importing orders and invoices, if a tax rate code i
 ################################################################################
 
 SPL_ObjectsList     = List of Available Objets 
-SPL_WidgetsList      = List of Available Widgets
+SPL_WidgetsList     = List of Available Widgets
 
 ################################################################################
 # Admin Page Connect Tests Results
