--- a/splash/langs/en_US/splash.lang
+++ b/splash/langs/en_US/splash.lang
@@ -50,6 +50,7 @@ SPL_WsMethod        =   WebService Protocol to Use
 SPL_Local_Config    =   Local Parameters 
 SPL_Local_Help      =   https://splashsync.github.io/Dolibarr/configuration/#setup-default-parameters
 SPL_DfLang          =   Default Language used by the module
+SPL_OtherLangs      =   Other Languages used by the module
 SPL_DfUser          =   User to use for all remote operations
 SPL_DfStock         =   Default Whareouse used by the module (if not spécified)
 SPL_DfPayMethod     =   Default Payement Method used by the module (if not spécified)
