--- a/splash/src/Translations/en_US/objects.ini
+++ b/splash/src/Translations/en_US/objects.ini
@@ -34,6 +34,7 @@ ProductStock_Desc       =   Quantité totale de produits en stock.
 ProductStockAlert_Desc  =   Quantité de produits en stock a partir de laquelle l'alerte stock est levée.
 ProductDesiredStock_Desc=   Niveau de stock désiré pour ce produit.
 ProductMainPrice_Desc   =   Prix de base de ce produit.
-
+ProductLabelIsRo        =   You have enabled Variant Module, Full Product Label is Now Read Only. Please refresh your Splash Server.
+ProductIsVariantBase    =   Luke, I am your father... This Product is a Variant base, so you cannot access it directly.
 
 ;MsgHistUpdateName   =   %s lignes de l'historique du serveur mis à jour.
