--- a/splash/src/Translations/fr_FR/objects.ini
+++ b/splash/src/Translations/fr_FR/objects.ini
@@ -34,6 +34,7 @@ ProductStock_Desc       =   Quantité totale de produits en stock.
 ProductStockAlert_Desc  =   Quantité de produits en stock a partir de laquelle l'alerte stock est levée.
 ProductDesiredStock_Desc=   Niveau de stock désiré pour ce produit.
 ProductMainPrice_Desc   =   Prix de base de ce produit.
-
+ProductLabelIsRo        =   Vous avez activé le module Variantes, la libellé produit complet est désormais en lecture seule. Actualisez votre serveur Splash.
+ProductIsVariantBase    =   Luke, je suis ton père... Ce Produit est une base de Variantes, il ne doit pas être lu directement.
 
 ;MsgHistUpdateName   =   %s lignes de l'historique du serveur mis à jour.
