ADD: Products by SKU Detection

--- a/splash/langs/en_US/splash.lang
+++ b/splash/langs/en_US/splash.lang
@@ -64,6 +64,8 @@ SPL_Orders_Config   =   Orders & Invoices
 SPL_Orders_Help     =   https://splashsync.github.io/Dolibarr/orders
 SPL_DetectTaxName   =   Detect tax rates using taxes codes dictionary
 SPL_DetectTaxName_T =   When importing orders and invoices, if a tax rate code is given and can be identified in your dictionary, it will be used by the module instead of the VAT rate provided in the price.
+SPL_DetectBySku     =   Detect Products by Reference (Ref. / SKU)
+SPL_DetectBySku_T   =   When importing orders and invoices, if no Product ID is given, try to identify the product by Reference. 
 SPL_Orders_Guest    =   Allow Import of Guests Orders & Invoices
 SPL_Orders_Guest_T  =   This mode allow import of Orders & Invoices passed using Guest Mode on moderns E-Commerce platforms.
 SPL_Orders_Guest_U  =   Select the default Customer all Guest invoices will be attached to.
