--- a/splash/langs/fr_FR/splash.lang
+++ b/splash/langs/fr_FR/splash.lang
@@ -64,6 +64,8 @@ SPL_Orders_Config   =   Commandes & Factures
 SPL_Orders_Help     =   https://splashsync.github.io/Dolibarr/fr/orders
 SPL_DetectTaxName   =   Détécter les taux de taxation selon leurs codes
 SPL_DetectTaxName_T =   Lors de l'import de commandes et de factures, si un code de taux de taxation est donné et peut être identifier dans votre dictionnaire, il sera utilisé par le module à la place du taux de TVA fourni dans le prix.
+SPL_DetectBySku     =   Détécter les produits par Référence (Ref. / SKU)
+SPL_DetectBySku_T   =   Lors de l'import de commandes et de factures, si aucun Id de Produit n'est donné, essayer d'identifier le produit par Réference. 
 SPL_Orders_Guest    =   Autoriser l'import de Commandes et de Factures en mode Invité
 SPL_Orders_Guest_T  =   Ce mode permet l'importation des commandes et des factures transmises par le mode Invité sur les plateformes de E-Commerce modernes.
 SPL_Orders_Guest_U  =   Sélectionnez le client par défaut auquel toutes les factures invités seront attachées.
